# scylla-cdc-rust

./: Cargo.toml
examples/scylla-cdc-printer/: Cargo.toml
examples/scylla-cdc-replicator/: Cargo.toml
