[package]
name = "scylla-cdc-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = { workspace = true }
scylla-cdc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
scylla-cdc-test-utils = { workspace = true }
